fixed laggy scrolling on safari

--- a/_assets/css/articles.scss
+++ b/_assets/css/articles.scss
@@ -180,6 +180,13 @@
   top: 5px;
   -webkit-filter: drop-shadow(1px 2px 1px rgba(0, 0, 0, .9));
   filter: drop-shadow(1px 2px 1px rgba(0, 0, 0, .9));
+  //CSS Hack to disable ribbon shadows to improve performance on safari
+  @media not all and (min-resolution: 0.001dpcm) {
+    @supports (-webkit-appearance: none) {
+      -webkit-filter: unset !important;
+    }
+  }
+  //-----------------------------
   text-transform: uppercase;
   font-weight: 500;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.80);
